--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -33,11 +33,11 @@ on:
 env:
   AWS_REGION: us-east-1                   # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: myecr           # set this to your Amazon ECR repository name
-  ECS_SERVICE: newservice                # set this to your Amazon ECS service name
-  ECS_CLUSTER: newcluster                 # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: newtask-revision1.json # set this to the path to your Amazon ECS task definition
+  ECS_SERVICE: devops                # set this to your Amazon ECS service name
+  ECS_CLUSTER: mycluster                 # set this to your Amazon ECS cluster name
+  ECS_TASK_DEFINITION: devops-revision1.json # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
-  CONTAINER_NAME: mycont           # set this to the name of the container in the
+  CONTAINER_NAME: devops           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
 
 permissions:
